@@ -30,6 +30,7 @@
             "fidwell.scenery_small.tjt6",
             "rct2.scenery_small.tjp2",
             "rct2.scenery_small.tjf",
+            "fidwell.scenery_small.tjf",
             "rct2.scenery_wall.wpw1",
             "$DAT:0A188003|ELLWPW1C",
             "rct2.scenery_wall.wpw2",
